apps/network-system/envoy-gateway/app/https-redirect.http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.kubernetes.io/controller: none
spec:
  # Apply this HTTPRoute to the internal Envoy Gateway
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: http
    - name: envoy-admin
      namespace: network-system
      sectionName: http
    - name: envoy-public
      namespace: network-system
      sectionName: http

  # Redirect all HTTP traffic to HTTPS
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
